@startuml GUI_Layer
scale 2
!theme plain
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam defaultFontName "Microsoft YaHei"
skinparam nodesep 40
skinparam ranksep 50
caption v2.2.0 · 2026-09-07

title GUI Layer — Qt 6 (Static)

class MainWindow {
    ** Widgets **
    - m_compressModeCombo : QComboBox*
    - m_fileListWidget : QListWidget*
    - m_outputDirEdit / m_outputFileNameEdit
    - m_passwordEdit : QLineEdit*
    - m_startCompressBtn / m_compressProgressBar
    - m_compressCurrentFileLabel / m_compressLogEdit
    - m_decompressFilePathEdit / m_decompressOutputDirEdit
    - m_decompressPasswordEdit
    - m_startDecompressBtn / m_decompressProgressBar
    - m_decompressLogEdit
    - m_tabWidget : QTabWidget*
    - m_backgroundPixmap : QPixmap
    --
    ** Workers **
    - m_workerThread : QThread*
    - m_worker : CompressionWorker*
    - m_isProcessing : bool
    --
    ** Slots **
    - onStartCompressionClicked() / onStartDecompressionClicked()
    - onAddFilesClicked() / onAddFolderClicked()
    - onCompressionDetailedProgress(..) / onCompressionFinished(..)
    - onDecompressionDetailedProgress(..) / onDecompressionFinished(..)
    --
    ** Overrides & Helpers **
    # dragEnterEvent / dropEvent / resizeEvent
    - setupUI() / createCompressionTab() / createDecompressionTab()
    - addDroppedPaths(urls) / updateOutputDirectory()
}

class CompressionWorker {
    - m_filesToCompress : QStringList
    - m_outputDir / m_outputFileName / m_password
    - m_mode : CompressionMode
    - m_decompressInputFile / m_decompressOutputDir
    - m_stopRequested : atomic~bool~
    - m_lastProgressTime / m_lastEmittedProgress
    --
    + setCompressionParams(..) / setDecompressionParams(..)
    + requestStop() : void
    + doCompression() : void
    + doDecompression() : void
    .. signals ..
    + detailedProgress(file, filePct, overallPct, status)
    + finished(success, message)
    --
    - validateCompressionParams() : bool
    - shouldEmitProgress(current) : bool
}

together {
    class PlaceholderLineEdit {
        - m_ghostText : QString
        - m_ghostTextColor : QColor
        + setGhostText / setGhostTextColor
        # paintEvent(event)
    }
    class IconHandler {
        + {static} AssociateIconToSyFile(syPath, iconPath)
        - {static} RegisterSyFileIcon / ExtractIconFromExe
    }
}

QMainWindow <|-- MainWindow
QLineEdit <|-- PlaceholderLineEdit
QObject <|-- CompressionWorker

MainWindow *--> CompressionWorker
MainWindow *--> "QThread"
MainWindow ..> IconHandler : uses
CompressionWorker --> "QThread" : runs on

note right of MainWindow
  GUI 主线程 + 独立工作线程
  进度经排队信号回传(参数全为
  Qt 内建元类型,跨线程安全)
  支持拖放文件/目录
end note

note right of CompressionWorker
  v2.2.0 起不再创建共享模块实例:
  调用 compressionLoop(paths, mode, password)
  / decompressionLoop(mode, password),
  模块组装下沉到流水线内部
  (读线程与每工人各自创建私有实例)
  进度回调节流:100ms 或 5% 跳变
  取消 = 原子标志 + 回调内抛异常
end note

@enduml
